# einlang

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  _config.yml  index.md  kalman_P_traj.npy  kalman_innovations.npy  kalman_measurements.npy  kalman_x_traj.npy  pyproject.toml  rd_ir.sexpr  verify_numpy_reduction_grads.py  whisper_profile_stdout.txt
_layouts/: default.html
docs/: AUTODIFF_ALGORITHM.md  AUTODIFF_DESIGN.md  AUTODIFF_EINSTEIN.md  AUTODIFF_EINSTEIN_OPS.md  AUTODIFF_EINSTEIN_OPS_IR_COMPARISON.md  AUTODIFF_FUTURE.md  AUTODIFF_IMPLEMENTATION.md  AUTODIFF_OPS.md  AUTODIFF_PIPELINE.md  BUILTINS_VS_C.md  DESIGN.md  DESIGN_INFLUENCES_TENSOR_DSL.md  DEVELOPMENT.md  DOCUMENTATION_DESIGN.md  EINLANG_FOR_JULIA_PROGRAMMERS.md  FAQ.md  GETTING_STARTED.md  IR_SPEC.md  JULIA_DEMOS.md  JULIA_SYNTAX_AND_DESIGN_IN_EINLANG.md  LEARNING_FROM_JULIA.md  LEARN_FROM_RUST_AND_JULIA.md  MATH.md  NUMERICS_STDLIB_DESIGN.md  PAPER.md  PERFORMANCE.md  PRINT_DIFFERENTIAL.md  README.md  RECURRENCE_ORDER_DESIGN.md  RELEASE_READINESS.md  REMAINING_DIFFS_TWO_PARTS.md  ROOT_CAUSE_C23921A_FROM_DIFF.md  ROOT_CAUSE_RNN_FROM_DIFF.md  RUNTIME_TO_COMPILER_FINDINGS.md  STUDY_SKIP_IR_ANALYSIS.md  SYNTAX_COMPARISON.md  SYNTAX_DESIGN_REFERENCES.md  TEST_PRINT_AT_STUDY_SKIP_COMPARE.md  TEST_PRINT_AT_STUDY_SKIP_DUMP.md  UNSUPPORTED.md  (+8 more)
examples/: README.md  autodiff_chain.ein  autodiff_loss.ein  autodiff_matmul.ein  autodiff_small.ein  autodiff_user_fn.ein  gradient_descent_autodiff.ein  heat_animation.py  hello.ein  profile_vectorize.py  run_autodiff_examples.py  run_numerics.ein  (+3 more)
(+1425 files in other folders)
