[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "einlang"
version = "0.1.0"
description = "A programming language for tensor computations with Einstein notation"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24",
    "lark>=1.1",
    "sexpdata>=1.0",
    "typing_extensions>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-ra"]
